--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 	
 	.side {
 		opacity: 0 !important;	 /* set to 1 (instead of 0) to make sure the sidebar is always visible */ 
-		right: -300px !important; /* set to 0 (instead of -300) to make sure the sidebar is always visible */ 
 		position: absolute !important; /* set to 'inline' (instead of 'absolute') to make sure the sidebar is always visible */ 
+		margin-right: -300px !important; /* set to 0 (instead of -300) to make sure the sidebar is always visible */ 		
 	}
 		
 	/****************************
@@ -248,6 +248,7 @@
 	****************************/
 	.side {
 		top: 0px !important;  
+		right: 0px !important;		
 		width: 300px !important;  
 		z-index: 20;
 		-moz-transition-duration: .4s;
