--- a/style.css
+++ b/style.css
@@ -268,6 +268,24 @@
 	  	width: 300px !important;
 		overflow: visible !important;
 	}    
+	
+	/* recently viewed links */
+	.sidecontentbox .content {
+		margin-left: 0px !important;
+		border: 0px solid white !important;
+	}
+	
+	.sidecontentbox .content .thing {
+		padding: 0px !important;
+	}
+	
+	.sidecontentbox .content .thing .midcol {
+		min-width: 0px !important;
+	}
+	
+	.sidecontentbox .content .thing br {
+		margin-bottom: 0px !important;
+	}
 
 	.titlebox {
 	   font-size: small !important;    
