--- a/style.css
+++ b/style.css
@@ -683,6 +683,10 @@
 	    text-decoration: none !important;
 	}	
 	
+	.c-btn-primary { /* e.g., on login page */
+		background-color: #4f86b5 !important;
+	}
+	
 	/***************************
 	******* Text Content ******* 
 	****************************/
