--- a/style.css
+++ b/style.css
@@ -637,8 +637,8 @@
 	    margin-bottom: 7px !important;
 	}	
 	
-	.link .flat-list.buttons { /* 'xx comments save hide' */
-	    font-size: 12px !important;
+	.flat-list.buttons { /* 'xx comments save hide' */
+	    font-size: 11px !important;
 	}	
 				
 	 /* .noncollapsed .flat-list.buttons li, .related-page .flat-list.buttons li, .other-discussions-page .flat-list.buttons li */
