Fixed color of button to buy Reddit gold.

--- a/style.css
+++ b/style.css
@@ -716,6 +716,10 @@
 		background-color: #4f86b5 !important;
 	}
 	
+	.gold-button {
+		background-color: #938870 !important;
+	}
+	
 	/***************************
 	******* Text Content ******* 
 	****************************/
